Guest name column width added

--- a/Views/Booking/AllBookings.cshtml
+++ b/Views/Booking/AllBookings.cshtml
@@ -60,7 +60,7 @@ function changeSelect() {
     {  
         <tr>  
             <td>@usr.No</td>  
-            <td class="text-align-left"><a href="/Booking/EditBooking?id=@usr._id.Trim()">@usr.GuestName</a></td>   
+            <td class="text-align-left width-130px"><a href="/Booking/EditBooking?id=@usr._id.Trim()">@usr.GuestName</a></td>   
             <td><a href="tel:@usr.Phone">@usr.Phone</a></td>   
             <td>@usr.CheckIn</td>   
             <td>@usr.CheckOut</td>   
