--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -186,11 +186,11 @@ body {
 }
 
 .screen {
-  background: linear-gradient(90deg, #5D54A4, #7C78B8);
+  background: linear-gradient(90deg, #346494, #3c7cbb);
   position: relative;
   height: 500px;
   width: 360px;
-  box-shadow: 0px 0px 24px #5C5696;
+  box-shadow: 0px 0px 24px #346494;
 }
 
 .screen__content {
@@ -227,7 +227,7 @@ body {
 .screen__background__shape2 {
   height: 220px;
   width: 220px;
-  background: #6C63AC;
+  background: #346494;
   top: -172px;
   right: 0;
   border-radius: 32px;
@@ -236,7 +236,7 @@ body {
 .screen__background__shape3 {
   height: 540px;
   width: 190px;
-  background: linear-gradient(270deg, #5D54A4, #6A679E);
+  background: linear-gradient(270deg, #346494, #3c7cbb);
   top: -24px;
   right: 0;
   border-radius: 32px;
@@ -245,7 +245,7 @@ body {
 .screen__background__shape4 {
   height: 400px;
   width: 200px;
-  background: #7E7BB9;
+  background: #3c7cbb;
   top: 420px;
   right: 50px;
   border-radius: 60px;
@@ -265,7 +265,7 @@ body {
 .login__icon {
   position: absolute;
   top: 30px;
-  color: #7875B5;
+  color: #346494;
 }
 
 .login__input {
@@ -283,7 +283,7 @@ body {
 .login__input:focus,
 .login__input:hover {
   outline: none;
-  border-bottom-color: #6A679E;
+  border-bottom-color: #346494;
 }
 
 .login__submit {
@@ -298,8 +298,8 @@ body {
   display: flex;
   align-items: center;
   width: 100%;
-  color: #4C489D;
-  box-shadow: 0px 2px 2px #5C5696;
+  color: #346494;
+  box-shadow: 0px 2px 2px #346494;
   cursor: pointer;
   transition: .2s;
 }
@@ -314,7 +314,7 @@ body {
 .button__icon {
   font-size: 24px;
   margin-left: auto;
-  color: #7875B5;
+  color: #3c7cbb;
 }
 
 .social-login {
