Privacy Content Update

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,9 +20,9 @@
   <div class="mySlides padding-top-10" onclick="plusSlides(1)">
     <img src="~/Images/LetzDiscuss.png" style="width:100%">
     <p>
-      Helps the user in completing specified tasks: Application software is designed with the user in mind. They help the end-user with specialized tasks in a variety of industries, including education, business, and entertainment. Microsoft Word, for example, is popular application software that allows users to create, edit, delete, and do other tasks with word documents.
-<br><br>Manages and manipulates data: Business companies utilize application software to manage and manipulate employees, customers, and other databases. Enterprise resource management systems and customer relationship management systems are two common examples of application software.
-<br><br>Allows users to effectively organize information: Individual users can use application software to efficiently create and handle large amounts of data. Microsoft Excel, for example, is popular application software that allows users to manage datasheets.
+      oneHut Application software is designed with the user in mind. helps the end-user with specialized tasks in your business, for example, oneHut allows users to create, edit, delete, and do other tasks.
+<br><br>Business companies utilize application software to manage and manipulate employees, customers, and other databases. Enterprise resource management systems and customer relationship management systems are two common examples of application software.
+<br><br>Allows users to effectively organize information, Individual users can use application software to efficiently create and handle large amounts of data. 
     </p>
   </div>
 
@@ -40,16 +40,17 @@
     <p>
        <b>Employee management system: </b>It is a core part of HR. This article will go over the best tools to manage employee records, work history, and other important employee data.
 
-If you’re researching HR technology, you’re probably doing so for one of two reasons. 1) You need an improvement to the system you currently use and are looking for an employee management app that has more (or better) features than what you are used to. 2) You are a growing business looking to implement employee management software for the first time. Either way, we can help.
-
-Whether you’re here to find a new tool or perhaps introducing an employee management system for the first time, this article will help you quickly compare and evaluate the best employee management system along with other human resources software. So let’s dive in!
+If you’re researching HR technology, you’re probably doing so for one of two reasons. 
+<br>1) You need an improvement to the system you currently use and are looking for an employee management app that has more (or better) features than what you are used to. 
+<br>2) You are a growing business looking to implement employee management software , oneHut Eployee module will give you that feature.
     </p>
   </div>
 
     <div class="mySlides padding-top-10" onclick="plusSlides(1)">
     <img src="~/Images/ThankYou.png" style="width:100%">
     <p>
-      We sincerely thank you for purchasing our  product. We have endeavored to satisfy our customers. We always assure the quality of our products. We give utmost importance to maintain the standard of our products. Please get back to us for any suggestions or complaints regarding the product. We wish to continue our relationship with you.
+      <br>
+      We sincerely thank you for purchasing our product. We have endeavored to satisfy our customers. We always assure the quality of our products. We give utmost importance to maintain the standard of our products. Please get back to us for any suggestions or complaints regarding the product. We wish to continue our relationship with you.
 
     </p>
      <!-- <div class="text">Caption Three</div> -->
