--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,8 +3,9 @@
 }
 <h1>@ViewData["Title"]</h1>
 <p><br></p>
+<p>Effective date: 2022-10-01&nbsp;</p>
 <p>Welcome to<b>&nbsp;oneHut</b>.</p>
-<p><b>oneHut&nbsp;</b>(&ldquo;us&rdquo;, &ldquo;we&rdquo;, or &ldquo;our&rdquo;) operates&nbsp;<b>https://onehut.azurewebsites.net</b>&nbsp;(hereinafter referred to as&nbsp;&ldquo;<b>Service</b>&rdquo;).</p>
+<p><b>oneHut&nbsp;</b>(&ldquo;we&rdquo;) operates&nbsp;<b>https://onehut.azurewebsites.net</b>&nbsp;(hereinafter referred to as&nbsp;&ldquo;<b>Service</b>&rdquo;).</p>
 <p>Our Privacy Policy governs your visit to&nbsp;<b>https://onehut.azurewebsites.net</b>, and explains how we collect, safeguard and disclose information that results from your use of our Service.</p>
 <p>We use your data to provide and improve Service. By using Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</p>
 <p>Our Terms and Conditions (&ldquo;<b>Terms</b>&rdquo;) govern all use of our Service and together with the Privacy Policy constitutes your agreement with us (&ldquo;<b>agreement</b>&rdquo;).</p>
@@ -22,11 +23,11 @@
 <p><b>Types of Data Collected</b></p>
 <p>Personal Data</p>
 <p>While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you (&ldquo;Personal Data&rdquo;). Personally identifiable information may include, but is not limited to:</p>
-<p>0.1. Email address</p>
-<p>0.2. First name and last name</p>
-<p>0.3. Phone number</p>
-<p>0.4. Address, Country, State, Province, ZIP/Postal code, City</p>
-<p>0.5. Cookies and Usage Data</p>
+<p>1. Email address</p>
+<p>2. First name and last name</p>
+<p>3. Phone number</p>
+<p>4. Address, Country, State, Province, ZIP/Postal code, City</p>
+<p>5. Cookies and Usage Data</p>
 <p>We may use your Personal Data to contact you with newsletters, marketing or promotional materials and other information that may be of interest to you. You may opt out of receiving any, or all, of these communications from us by following the unsubscribe link.</p>
 <p><b>Usage Data</b></p>
 <p>We may also collect information that your browser sends whenever you visit our Service or when you access Service by or through any device (&ldquo;<b>Usage Data</b>&rdquo;).</p>
@@ -37,26 +38,26 @@
 <p>Cookies are files with a small amount of data which may include an anonymous unique identifier. Cookies are sent to your browser from a website and stored on your device. Other tracking technologies are also used such as beacons, tags and scripts to collect and track information and to improve and analyse our Service.</p>
 <p>You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Service.</p>
 <p>Examples of Cookies we use:</p>
-<p>0.1.&nbsp;<b>Session Cookies:</b>&nbsp;We use Session Cookies to operate our Service.</p>
-<p>0.2.&nbsp;<b>Preference Cookies:</b>&nbsp;We use Preference Cookies to remember your preferences and various settings.</p>
-<p>0.3.&nbsp;<b>Security Cookies:</b>&nbsp;We use Security Cookies for security purposes.</p>
+<p>1.&nbsp;<b>Session Cookies:</b>&nbsp;We use Session Cookies to operate our Service.</p>
+<p>2.&nbsp;<b>Preference Cookies:</b>&nbsp;We use Preference Cookies to remember your preferences and various settings.</p>
+<p>3.&nbsp;<b>Security Cookies:</b>&nbsp;We use Security Cookies for security purposes.</p>
 <p><b>Other Data</b></p>
-<p>While using our Service, we may also collect the following information: sex, age, date of birth, place of birth, passport details, citizenship, registration at place of residence and actual address, telephone number (work, mobile), details of documents on education, qualification, professional training, employment agreements, information on bonuses and compensation, information on marital status, family members, social security (or other taxpayer identification) number, office location and other data.</p>
+<p>While using our Service, we may also collect the following information: sex, age, date of birth, place of birth, passport details, citizenship, registration at place of residence and actual address, telephone number (work, mobile) office location and other data.</p>
 <p>&nbsp;<b>Use of Data</b></p>
 <p>oneHut uses the collected data for various purposes:</p>
-<p>0.1. to provide and maintain our Service;</p>
-<p>0.2. to notify you about changes to our Service;</p>
-<p>0.3. to allow you to participate in interactive features of our Service when you choose to do so;</p>
-<p>0.4. to provide customer support;</p>
-<p>0.5. to gather analysis or valuable information so that we can improve our Service;</p>
-<p>0.6. to monitor the usage of our Service;</p>
-<p>0.7. to detect, prevent and address technical issues;</p>
-<p>0.8. to fulfil any other purpose for which you provide it;</p>
-<p>0.9. to carry out our obligations and enforce our rights arising from any contracts entered into between you and us, including for billing and collection;</p>
-<p>0.10. to provide you with notices about your account and/or subscription, including expiration and renewal notices, email-instructions, etc.;</p>
-<p>0.11. to provide you with news, special offers and general information about other goods, services and events which we offer that are similar to those that you have already purchased or enquired about unless you have opted not to receive such information;</p>
-<p>0.12. in any other way we may describe when you provide the information;</p>
-<p>0.13. for any other purpose with your consent.</p>
+<p>1. to provide and maintain our Service;</p>
+<p>2. to notify you about changes to our Service;</p>
+<p>3. to allow you to participate in interactive features of our Service when you choose to do so;</p>
+<p>4. to provide customer support;</p>
+<p>5. to gather analysis or valuable information so that we can improve our Service;</p>
+<p>6. to monitor the usage of our Service;</p>
+<p>7. to detect, prevent and address technical issues;</p>
+<p>8. to fulfil any other purpose for which you provide it;</p>
+<p>9. to carry out our obligations and enforce our rights arising from any contracts entered into between you and us, including for billing and collection;</p>
+<p>1 to provide you with notices about your account and/or subscription, including expiration and renewal notices, email-instructions, etc.;</p>
+<p>11. to provide you with news, special offers and general information about other goods, services and events which we offer that are similar to those that you have already purchased or enquired about unless you have opted not to receive such information;</p>
+<p>12. in any other way we may describe when you provide the information;</p>
+<p>13. for any other purpose with your consent.</p>
 <p><b>Retention of Data</b></p>
 <p>We will retain your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes, and enforce our legal agreements and policies.</p>
 <p>We will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period, except when this data is used to strengthen the security or to improve the functionality of our Service, or we are legally obligated to retain this data for longer time periods.</p>
@@ -70,13 +71,13 @@
 <p><b>Business Transaction</b></p>
 <p>If we or our subsidiaries are involved in a merger, acquisition or asset sale, your Personal Data may be transferred.</p>
 <p><b>Other cases. We may disclose your information also:</b></p>
-<p>0.2.1. to our subsidiaries and affiliates;</p>
-<p>0.2.2. to contractors, service providers, and other third parties we use to support our business;</p>
-<p>0.2.3. to fulfil the purpose for which you provide it;</p>
-<p>0.2.4. for the purpose of including your company&rsquo;s logo on our website;</p>
-<p>0.2.5. for any other purpose disclosed by us when you provide the information;</p>
-<p>0.2.6. with your consent in any other cases;</p>
-<p>0.2.7. if we believe disclosure is necessary or appropriate to protect the rights, property, or safety of the Company, our customers, or others.</p>
+<p>1. to our subsidiaries and affiliates;</p>
+<p>2. to contractors, service providers, and other third parties we use to support our business;</p>
+<p>3. to fulfil the purpose for which you provide it;</p>
+<p>4. for the purpose of including your company&rsquo;s logo on our website;</p>
+<p>5. for any other purpose disclosed by us when you provide the information;</p>
+<p>6. with your consent in any other cases;</p>
+<p>7. if we believe disclosure is necessary or appropriate to protect the rights, property, or safety of the Company, our customers, or others.</p>
 <p>&nbsp;<b>Security of Data</b></p>
 <p>The security of your data is important to us but remember that no method of transmission over the Internet or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Data, we cannot guarantee its absolute security.</p>
 <p>&nbsp;<b>Your Data Protection Rights Under General Data Protection Regulation (GDPR)</b></p>
@@ -84,12 +85,12 @@
 <p>We aim to take reasonable steps to allow you to correct, amend, delete, or limit the use of your Personal Data.</p>
 <p>If you wish to be informed what Personal Data we hold about you and if you want it to be removed from our systems, please email us at<b>&nbsp;oneHut.mailbox@gmail.com.</b></p>
 <p>In certain circumstances, you have the following data protection rights:</p>
-<p>0.1. The right to access, update or to delete the information we have on you;</p>
-<p>0.2. The right of rectification. You have the right to have your information rectified if that information is inaccurate or incomplete;</p>
-<p>0.3. The right to object. You have the right to object to our processing of your Personal Data;</p>
-<p>0.4. The right of restriction. You have the right to request that we restrict the processing of your personal information;</p>
-<p>0.5. The right to data portability. You have the right to be provided with a copy of your Personal Data in a structured, machine-readable and commonly used format;</p>
-<p>0.6. the right to withdraw consent. You also have the right to withdraw your consent at any time where we rely on your consent to process your personal information;</p>
+<p>1. The right to access, update or to delete the information we have on you;</p>
+<p>2. The right of rectification. You have the right to have your information rectified if that information is inaccurate or incomplete;</p>
+<p>3. The right to object. You have the right to object to our processing of your Personal Data;</p>
+<p>4. The right of restriction. You have the right to request that we restrict the processing of your personal information;</p>
+<p>5. The right to data portability. You have the right to be provided with a copy of your Personal Data in a structured, machine-readable and commonly used format;</p>
+<p>6. the right to withdraw consent. You also have the right to withdraw your consent at any time where we rely on your consent to process your personal information;</p>
 <p>Please note that we may ask you to verify your identity before responding to such requests. Please note, we may not be able to provide Service without some necessary data.</p>
 <p>You have the right to complain to a Data Protection Authority about our collection and use of your Personal Data.&nbsp;</p>
 <p><b>Changes to This Privacy Policy</b></p>
