--- a/Views/Home/Feature.cshtml
+++ b/Views/Home/Feature.cshtml
@@ -57,8 +57,8 @@
 
 <body>
 	<center>
-		<h3>Public IP Address of user is:</h3>
-		<p id="gfg"></p>
+		@*<h3>Public IP Address of user is:</h3>
+		<p id="gfg"></p>*@
 
 	</center>
 </body>
