--- a/Views/Shared/_LayoutClient.cshtml
+++ b/Views/Shared/_LayoutClient.cshtml
@@ -35,16 +35,16 @@
                                 asp-action="Booking">Booking</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"
+                            <a class="nav-link text-dark color-grey" asp-area="" asp-controller="Home"
                                 asp-action="Employee">Employee</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Feature" disabled>Food &
-                                Beverages</a>
+                            <a class="nav-link text-dark color-grey" asp-area="" asp-controller="Home" asp-action="Feature" disabled>Food &
+                                Beverage</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"
+                            <a class="nav-link text-dark color-grey" asp-area="" asp-controller="Home"
                                 asp-action="Report">Report</a>
                         </li>
                         <li class="nav-item">
