--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,8 +13,8 @@
 <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
-  <div class="mySlides" onclick="plusSlides(1)">
-    <img src="~/Images/oneHut.png" style="width:100%">
+  <div class="mySlides text-center" onclick="plusSlides(1)">
+    <img src="~/Images/oneHut.png" style="width:80%">
   </div>
 
   <div class="mySlides padding-top-10" onclick="plusSlides(1)">
@@ -38,9 +38,9 @@
   <div class="mySlides padding-top-9" onclick="plusSlides(1)">
     <img src="~/Images/NewFeature.png" style="width:100%">
     <p>
-       <b>Employee management system: </b>It is a core part of HR. This article will go over the best tools to manage employee records, work history, and other important employee data.
+       Employee management system: To manage employee records, work history, and other important employee data.
 
-If you’re researching HR technology, you’re probably doing so for one of two reasons. 
+If you’re researching Employee management system, you’re probably doing so for one of two reasons. 
 <br>1) You need an improvement to the system you currently use and are looking for an employee management app that has more (or better) features than what you are used to. 
 <br>2) You are a growing business looking to implement employee management software , oneHut Eployee module will give you that feature.
     </p>
