--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,12 +39,12 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3 width-99">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted footer-bottom">
         <div class="container">
             &copy; 2022 - oneHut - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
