--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -591,6 +591,11 @@ body {
 }
 
 
+.display-block {
+  display: block;
+}
+
+
 .text-area {
   overflow-y: scroll;
   resize: none;
@@ -664,3 +669,22 @@ input[type=number]::-webkit-outer-spin-button {
   color: grey !important;
 }
 
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
+}
+
+.footer-bottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem; 
+  padding-bottom: 2.5rem;    /* Footer height */
+
+}
