--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
-  <div class="mySlides text-center" onclick="plusSlides(1)">
+  <div class="mySlides text-align-center" onclick="plusSlides(1)">
     <img src="~/Images/oneHut.png" style="width:80%">
   </div>
 
