--- a/Views/Shared/_LayoutClient.cshtml
+++ b/Views/Shared/_LayoutClient.cshtml
@@ -61,7 +61,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3  width-100">
+        <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
