--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -692,3 +692,7 @@ input[type=number]::-webkit-outer-spin-button {
 .font-size-large{
   font-size: large !important;
 }
+
+.min-width-830px {
+  min-width: 830px;
+}
