--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -476,12 +476,20 @@ body {
   width: 20px;
 }
 
+.width-25px {
+  width: 25px;
+}
+
 .width-40px {
   width: 40px;
 }
 
 .width-20 {
   width: 20%;
+}
+
+.width-4 {
+  width: 4%;
 }
 
 .width-5 {
