--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -47,7 +47,7 @@ function isNewBooking(){
     <div class="row text-left grid-header cursor-pointer min-width-820px @newBookingStyle" id="newBookingClose" onclick="isNewBooking()">
         <table><tr>
             <td>
-<label class="cursor-pointer"><img src="~/Images/newBookPlus.png" class="width-25px"> New Booking
+<label class="cursor-pointer padding-left-10px"><img src="~/Images/newBookPlus.png" class="width-25px"> New Booking
         <label class="color-grey cursor-pointer">(Click here)</label></label>
             </td>
             <td>
@@ -209,7 +209,7 @@ function isNewBooking(){
                                         <td>
                                             <table>
                                                 <tr>
-                                                    <td class="padding-left-10">
+                                                    <td class="padding-left-10px">
                                                         <div class="slideshow-container">
                                                             @if (Model.PostedFiles.Count > 0)
                                                             {
