--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -484,8 +484,8 @@ body {
   width: 40px;
 }
 
-.width-20 {
-  width: 20%;
+.width-23 {
+  width: 23%;
 }
 
 .width-4 {
@@ -506,6 +506,10 @@ body {
 
 .width-15 {
   width: 15%;
+}
+
+.width-20 {
+  width: 20%;
 }
 
 .width-25 {
@@ -568,6 +572,9 @@ body {
   width: 160px;
 }
 
+.width-180px {
+  width: 180px;
+}
 
 .width-182px {
   width: 182px;
@@ -637,7 +644,7 @@ input[type=number]::-webkit-outer-spin-button {
   padding-top: 10%;
 }
 
-.padding-left-10 {
+.padding-left-10px {
   padding-left: 10px;
 }
 
