--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -109,7 +109,7 @@ function isNewBooking(){
                 </table>
             </div>
             <div style="width:100%; text-align: center;">
-                <table class="table table-bordered table-responsive table-hover">
+                <table class="table table-bordered table-responsive">
                     <tr class="grid-background">
                         <th class="text-align-left">Guest Name</th>
                         <th class="text-align-left">Phone</th>
@@ -169,7 +169,7 @@ function isNewBooking(){
                                 <td>
                                     <tr>
                                         <td class="width-50">
-                                            <table class="table table-bordered table-responsive table-hover">
+                                            <table class="table table-bordered table-responsive">
                                                 <tr>
                                                     <th class="text-align-left background-color-cornflowerblue">Bill
                                                         Amount</th>
