--- a/Views/Booking/AllBookings.cshtml
+++ b/Views/Booking/AllBookings.cshtml
@@ -38,7 +38,7 @@ function changeSelect() {
     </div>
     <div style="width:100%; text-align: center;">
         
-       <table class="table table-bordered table-responsive table-hover">  
+       <table class="table table-bordered table-responsive">  
     <tr class="grid-background">  
         <th>No.</th>  
         <th>Guest Name</th>  
@@ -103,7 +103,7 @@ function changeSelect() {
                 <a href="/Booking/UpdateBooking?useraction=checkout&id=@usr._id.Trim()">
                 <img src="~/Images/CheckOutGreen1.jpg" style="width:28%" title="Check out"></a>
                 
-                <img src="~/Images/CancelDisabled.jpg" style="width:28%" title="Cancel Booking">
+                <img src="~/Images/CancelDisabled.jpg" style="width:30%" title="Cancel Booking">
 
                 </div>
             }
