--- a/Views/Shared/_LayoutClient.cshtml
+++ b/Views/Shared/_LayoutClient.cshtml
@@ -40,7 +40,8 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark color-grey" asp-area="" asp-controller="Home" asp-action="Feature" disabled>Food &
+                            <a class="nav-link text-dark color-grey" asp-area="" asp-controller="Home"
+                                asp-action="Feature" disabled>Food &
                                 Beverage</a>
                         </li>
                         <li class="nav-item">
@@ -50,6 +51,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"
                                 asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"
+                                asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"
