--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -79,7 +79,7 @@ body {
 /* Hide the images by default */
 .mySlides {
   display: none;
-  text-decoration:none;
+  text-decoration: none;
 }
 
 /* Next & previous buttons */
@@ -591,6 +591,7 @@ body {
 .width-225px {
   width: 225px;
 }
+
 .width-330px {
   width: 330px;
 }
@@ -633,10 +634,10 @@ body {
   -webkit-appearance: none;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
   opacity: 1;
 }
 
@@ -657,7 +658,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 }
 
-.link-container{
+.link-container {
   position: absolute;
   bottom: 10px;
   left: 10px;
@@ -685,29 +686,36 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #content-wrap {
-  padding-bottom: 2.5rem;    /* Footer height */
+  padding-bottom: 2.5rem;
+  /* Footer height */
 }
 
 #footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;            /* Footer height */
+  height: 2.5rem;
+  /* Footer height */
 }
 
 .footer-bottom {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem; 
-  padding-bottom: 2.5rem;    /* Footer height */
+  height: 2.5rem;
+  padding-bottom: 2.5rem;
+  /* Footer height */
 
 }
 
-.font-size-large{
+.font-size-large {
   font-size: large !important;
 }
 
 .min-width-820px {
   min-width: 820px;
+}
+
+.padding-15px {
+  padding: 15px;
 }
